--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gatsby-casper",
-  "description": "Casper for gatsby",
+  "description": "masimplo.com blog",
   "version": "0.0.0",
   "private": true,
-  "author": "Scott Cooper <scttcper@gmail.com>",
+  "author": "Michael Asimakopoulos <masimplo@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -20,27 +20,27 @@
     "date-fns": "2.29.3",
     "emotion": "11.0.0",
     "emotion-server": "11.0.0",
-    "gatsby": "5.0.0",
-    "gatsby-plugin-canonical-urls": "5.0.0",
-    "gatsby-plugin-emotion": "8.0.0",
-    "gatsby-plugin-feed": "5.0.0",
-    "gatsby-plugin-google-analytics": "5.0.0",
-    "gatsby-plugin-image": "3.0.0",
-    "gatsby-plugin-postcss": "6.0.0",
-    "gatsby-plugin-react-helmet": "6.0.0",
-    "gatsby-plugin-sharp": "5.0.0",
-    "gatsby-plugin-sitemap": "6.0.0",
-    "gatsby-plugin-typescript": "5.0.0",
-    "gatsby-remark-copy-linked-files": "6.0.0",
-    "gatsby-remark-images": "7.0.0",
-    "gatsby-remark-prismjs": "7.0.0",
-    "gatsby-remark-responsive-iframe": "6.0.0",
-    "gatsby-remark-smartypants": "6.0.0",
-    "gatsby-source-filesystem": "5.0.0",
-    "gatsby-transformer-json": "5.0.0",
-    "gatsby-transformer-remark": "6.0.0",
-    "gatsby-transformer-sharp": "5.0.0",
-    "gatsby-transformer-yaml": "5.0.0",
+    "gatsby": "5.4.0",
+    "gatsby-plugin-canonical-urls": "5.4.0",
+    "gatsby-plugin-emotion": "8.4.0",
+    "gatsby-plugin-feed": "5.4.0",
+    "gatsby-plugin-google-analytics": "5.4.0",
+    "gatsby-plugin-image": "3.4.0",
+    "gatsby-plugin-postcss": "6.4.0",
+    "gatsby-plugin-react-helmet": "6.4.0",
+    "gatsby-plugin-sharp": "5.4.0",
+    "gatsby-plugin-sitemap": "6.4.0",
+    "gatsby-plugin-typescript": "5.4.0",
+    "gatsby-remark-copy-linked-files": "6.4.0",
+    "gatsby-remark-images": "7.4.0",
+    "gatsby-remark-prismjs": "7.4.0",
+    "gatsby-remark-responsive-iframe": "6.4.0",
+    "gatsby-remark-smartypants": "6.4.0",
+    "gatsby-source-filesystem": "5.4.0",
+    "gatsby-transformer-json": "5.4.0",
+    "gatsby-transformer-remark": "6.4.0",
+    "gatsby-transformer-sharp": "5.4.0",
+    "gatsby-transformer-yaml": "5.4.0",
     "lodash-es": "4.17.21",
     "normalize.css": "8.0.1",
     "polished": "4.2.2",
@@ -56,21 +56,21 @@
   },
   "devDependencies": {
     "@types/lodash-es": "4.17.6",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
-    "@types/react-helmet": "6.1.5",
-    "@typescript-eslint/eslint-plugin": "5.42.1",
-    "@typescript-eslint/parser": "5.42.1",
-    "eslint": "8.27.0",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@types/react-helmet": "6.1.6",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
+    "eslint": "8.31.0",
     "eslint-config-xo-react": "0.27.0",
     "eslint-config-xo-space": "0.34.0",
-    "eslint-config-xo-typescript": "0.54.1",
+    "eslint-config-xo-typescript": "0.55.1",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react": "7.32.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "gatsby-plugin-netlify": "^5.1.0",
-    "typescript": "4.8.4"
+    "typescript": "4.9.4"
   },
   "browserslist": [
     ">5%",
