--- a/package.json
+++ b/package.json
@@ -14,63 +14,63 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@emotion/react": "11.10.5",
-    "@emotion/styled": "11.10.5",
-    "cssnano": "5.1.14",
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "cssnano": "7.0.4",
     "date-fns": "2.29.3",
     "emotion": "11.0.0",
     "emotion-server": "11.0.0",
-    "gatsby": "5.4.0",
-    "gatsby-plugin-canonical-urls": "5.4.0",
-    "gatsby-plugin-emotion": "8.4.0",
-    "gatsby-plugin-feed": "5.4.0",
-    "gatsby-plugin-google-gtag": "5.6.0",
-    "gatsby-plugin-image": "3.4.0",
-    "gatsby-plugin-postcss": "6.4.0",
-    "gatsby-plugin-react-helmet": "6.4.0",
-    "gatsby-plugin-sharp": "5.4.0",
-    "gatsby-plugin-sitemap": "6.4.0",
-    "gatsby-plugin-typescript": "5.4.0",
-    "gatsby-remark-copy-linked-files": "6.4.0",
-    "gatsby-remark-images": "7.4.0",
-    "gatsby-remark-prismjs": "7.4.0",
-    "gatsby-remark-responsive-iframe": "6.4.0",
-    "gatsby-remark-smartypants": "6.4.0",
-    "gatsby-source-filesystem": "5.4.0",
-    "gatsby-transformer-json": "5.4.0",
-    "gatsby-transformer-remark": "6.4.0",
-    "gatsby-transformer-sharp": "5.4.0",
-    "gatsby-transformer-yaml": "5.4.0",
+    "gatsby": "5.13.7",
+    "gatsby-plugin-canonical-urls": "5.13.1",
+    "gatsby-plugin-emotion": "8.13.1",
+    "gatsby-plugin-feed": "5.13.1",
+    "gatsby-plugin-google-gtag": "5.13.1",
+    "gatsby-plugin-image": "3.13.1",
+    "gatsby-plugin-postcss": "6.13.1",
+    "gatsby-plugin-react-helmet": "6.13.1",
+    "gatsby-plugin-sharp": "5.13.1",
+    "gatsby-plugin-sitemap": "6.13.1",
+    "gatsby-plugin-typescript": "5.13.1",
+    "gatsby-remark-copy-linked-files": "6.13.1",
+    "gatsby-remark-images": "7.13.1",
+    "gatsby-remark-prismjs": "7.13.1",
+    "gatsby-remark-responsive-iframe": "6.13.1",
+    "gatsby-remark-smartypants": "6.13.1",
+    "gatsby-source-filesystem": "5.13.1",
+    "gatsby-transformer-json": "5.13.1",
+    "gatsby-transformer-remark": "6.13.1",
+    "gatsby-transformer-sharp": "5.13.1",
+    "gatsby-transformer-yaml": "5.13.1",
     "lodash-es": "4.17.21",
     "normalize.css": "8.0.1",
     "polished": "4.2.2",
     "postcss-color-function": "4.1.0",
     "prism-themes": "1.9.0",
     "prismjs": "1.29.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-emotion": "10.0.0",
     "react-helmet": "6.1.0",
     "reading-time": "1.5.0",
-    "rehype-react": "7.1.1"
+    "rehype-react": "8.0.0"
   },
   "devDependencies": {
-    "@types/lodash-es": "4.17.6",
+    "@types/lodash-es": "4.17.12",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "@types/react-helmet": "6.1.6",
-    "@typescript-eslint/eslint-plugin": "5.48.1",
-    "@typescript-eslint/parser": "5.48.1",
-    "eslint": "8.31.0",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@types/react-helmet": "6.1.11",
+    "@typescript-eslint/eslint-plugin": "7.16.1",
+    "@typescript-eslint/parser": "7.16.1",
+    "eslint": "8.56.0",
     "eslint-config-xo-react": "0.27.0",
-    "eslint-config-xo-space": "0.34.0",
-    "eslint-config-xo-typescript": "0.55.1",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-react": "7.32.0",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "gatsby-plugin-netlify": "^5.1.0",
-    "typescript": "4.9.4"
+    "eslint-config-xo-space": "0.35.0",
+    "eslint-config-xo-typescript": "4.0.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-react": "7.34.4",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "gatsby-plugin-netlify": "5.1.1",
+    "typescript": "5.5.3"
   },
   "browserslist": [
     ">5%",
